--- a/projects/titanic_survival_exploration/titanic_survival_exploration.html
+++ b/projects/titanic_survival_exploration/titanic_survival_exploration.html
@@ -13327,6 +13327,8 @@ Make sure to keep track of the various features and conditions you tried before 
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer</strong>: 80.92%
+use vs.survival_stats to compare different sets of parameters. For a set of n variables, keep the range for n-1 variables the same and change the nth variable to see if it's influencing the survival rate.
+Initially I tried Pclass with sex, and then add more variables.
 features: Pclass, Sex, Age, SibSp, Parch
 Pclass and Sex have more influence than others.</p>
 
